--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "name": "perpay-dashboard",
-  "version": "0.1.0",
+  "name": "react-app-safe",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
-    "@material-ui/data-grid": "^4.0.0-alpha.25",
-    "@material-ui/icons": "latest",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "clsx": "latest",
-    "prop-types": "latest",
+    "@material-ui/core": "^4.12.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "recharts": "^2.0.9",
-    "web-vitals": "^1.1.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   },
   "browserslist": {
     "production": [
